--- a/vignettes/V1_BasicExample.Rmd
+++ b/vignettes/V1_BasicExample.Rmd
@@ -66,7 +66,7 @@ In `cxr` we have included five different population dynamic models for estimatin
 
 $$F_i = \frac{\lambda_i}{1+\sum \alpha_{ij}N_j}$$
 
-Specifying an optimization method, we can now call the main function with sensible values of upper and lower parameter bounds. We have implemented optimization with eight different optimization procedures, that cover a range of methodologies (see e.g. the help of `pm_optim` for the available methods, and *Mullen, K.M. 2014. Journal of Statistical Software 60:1–45* for an overview of optimization methods). Note that not all methods accept lower and upper boundaries, e.g. the standard method `optim_NM` does not, whereas `optim_L-BFGS-B` does accept boundaries. However, `optim_L-BFGS-B` does not allow parameter values for which the optimization function is undefined, and this will return an error. In this simple example, we use this latter method with allowed lower and upper boundaries.  
+Specifying an optimization method, we can now call the main function with sensible values of upper and lower parameter bounds. We have implemented optimization with eight different optimization procedures, that cover a range of methodologies (see the vignette `Data and Model formats` for the available methods, and *Mullen, K.M. 2014. Journal of Statistical Software 60:1–45* for an overview of optimization methods). Note that not all methods accept lower and upper boundaries, e.g. the standard method `optim_NM` does not, whereas `optim_L-BFGS-B` does accept boundaries. However, `optim_L-BFGS-B` does not allow parameter values for which the optimization function is undefined, and this will return an error. In this simple example, we use this latter method with allowed lower and upper boundaries.  
 
 ```{r message=F, warning=F}
 sp1.par <- pm_optim(fitness.model = model_BH3,
