--- a/vignettes/V1_Getting_Started.Rmd
+++ b/vignettes/V1_Getting_Started.Rmd
@@ -29,7 +29,7 @@ data("neigh_list", package = "cxr")
 
 ```{r}
 my.sp <- "HOMA"
-# get data from the list 
+# get data from the list
 obs_homa <- neigh_list[[my.sp]]
 # no need for ID column
 obs_homa <- subset(obs_homa,select = -c(obs_ID))
@@ -64,7 +64,7 @@ summary(fit_homa)
 we can access the elements of the returned object as usual
 
 ```{r}
-fit_homa$alpha
+fit_homa$alpha_inter
 ```
 
 2 - multispecies fit including the effect of a covariate over lambda and alpha parameters
@@ -74,7 +74,7 @@ my.sp <- c("BEMA","MEEL","PUPA")
 obs_3sp <- data <- neigh_list[my.sp]
 # discard ID column
 for(i in 1:length(data)){
-   obs_3sp[[i]] <- obs_3sp[[i]][,2:length(data[[i]])]
+  obs_3sp[[i]] <- obs_3sp[[i]][,2:length(data[[i]])]
 }
 # covariates: salinity
 data("salinity_list")
@@ -87,29 +87,32 @@ for(i in 1:length(salinity)){
 
 ```{r warning=FALSE,message=FALSE}
 fit_3sp <- cxr_pm_multifit(data = obs_3sp,
-                              optimization_method = "bobyqa",
-                              covariates = salinity,
-                              alpha_form = "pairwise",
-                              lambda_cov_form = "global",
-                              alpha_cov_form = "global",
-                              initial_values = list(lambda = 1,
-                                                    alpha = 1,
-                                                    lambda_cov = 0.1, 
-                                                    alpha_cov = 0.1),
-                              lower_bounds = list(lambda = 0,
-                                                  alpha = 0,
-                                                  lambda_cov = 0, 
-                                                  alpha_cov = 0),
-                              upper_bounds = list(lambda = 100,
-                                                  alpha = 10,
-                                                  lambda_cov = 1, 
-                                                  alpha_cov = 1),
-                              bootstrap_samples = 3)
+                           focal_column = my.sp,
+                           optimization_method = "bobyqa",
+                           covariates = salinity,
+                           alpha_form = "pairwise",
+                           lambda_cov_form = "global",
+                           alpha_cov_form = "global",
+                           initial_values = list(lambda = 1,
+                                                 alpha_intra = 0.1,
+                                                 alpha_inter = 0.1,
+                                                 lambda_cov = 0.1,
+                                                 alpha_cov = 0.1),
+                           lower_bounds = list(lambda = 0,
+                                               alpha_intra = 0,
+                                               alpha_inter = -1,
+                                               lambda_cov = 0,
+                                               alpha_cov = 0),
+                           upper_bounds = list(lambda = 100,
+                                               alpha_intra = 1,
+                                               alpha_inter = 1,
+                                               lambda_cov = 1,
+                                               alpha_cov = 1),
+                           bootstrap_samples = 3)
 ```
 
 ```{r}
 summary(fit_3sp)
-fit_3sp$alpha
 ```
 
 
