--- a/vignettes/V1_Getting_Started.Rmd
+++ b/vignettes/V1_Getting_Started.Rmd
@@ -64,6 +64,9 @@ summary(fit_homa)
 we can access the elements of the returned object as usual
 
 ```{r}
+# intraspecific interaction
+fit_homa$alpha_intra
+# interspecific interactions
 fit_homa$alpha_inter
 ```
 
