--- a/vignettes/V1_Getting_Started.Rmd
+++ b/vignettes/V1_Getting_Started.Rmd
@@ -16,9 +16,11 @@ knitr::opts_chunk$set(message = FALSE, warning = FALSE)
 
 **Introduction**
 
-The `cxr` package provides a general interface to parameterize population dynamics models from empirical data, and obtain from the estimations of these parameters (species vital rates and interaction coefficients) a series of metrics associated with modern coexistence theory. These metrics measure species competitive ability, their responses to competition as well as niche and average fitness differences (both demographic and competitive response differences).
+The `cxr` package provides a general interface to obtain estimates of species vital rates and interaction coefficients between species pairs from empirical data. These estimations are critical to parameterize population models describing the dynamics of interacting species. They also allow computing a series of metrics associated with modern coexistence theory that inform about the likelihood of species to coexist. These metrics are the niche differences that stabilize coexistence between competing species and the average fitness differences that drive competitive dominance and in the absence of niche differences determine the superior competitor. The package also allow computing the two components of the average fitness differences. These are the demographic differences (i.e. species differences in their intrisic population growth rate) and competitive response differences (i.e. species differences in their sensitivity to reduce offspring in response to both intraspecific and interspecific competition). These two components are equally important for determining the species competitive ability (see *Hart et al. 2018 Journal of Ecology)
 
-Here we demonstrate the basic functionality of the package, using the data included in it (see *Lanuza, Bartomeus, Godoy. 2018. Ecology Letters 21:865-874* for a description of the dataset). In particular, with this dataset, we will obtain the values of seed production in the absence of neighbours and the strength of direct interactions between pairs of species. These values are the basis for estimating the degree of niche overlap and average fitness differences between any pair of species. 
+The package also allow exploring how environmental variation modifies both the ability of species to produce offspring and interaction coefficients between pairs of species (including itself). This feature open the possibility to explore how stabilizing niche differences and average fitness differences vary across environmental gradients, and therefore, it predicts whether the likelihood of species to coexist is not constant across environmental conditions.  
+
+Here we demonstrate the basic functionality of the package using a published dataset (see *Lanuza, Bartomeus, Godoy. 2018. Ecology Letters 21:865-874* for a description of the dataset). With this example, we will specifically estimate from an observational species seed production in the absence of neighbors and the strength and sign of interactions between species pairs. These values are the basis for estimating the degree of niche overlap (i.e 1- niche differences) and average fitness differences between species pairs.  
 
 **Set up**
 
