--- a/vignettes/V1_Getting_Started.Rmd
+++ b/vignettes/V1_Getting_Started.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Getting started with cxr"
 output: rmarkdown::html_vignette
-author: cxr team
+author: David García-Callejas and cxr team
 vignette: >
   %\VignetteIndexEntry{Getting started}
   \usepackage[utf8]{inputenc}
@@ -18,35 +18,39 @@ knitr::opts_chunk$set(message = FALSE, warning = FALSE)
 
 The `cxr` package provides a general interface to obtain estimates of species vital rates and interaction coefficients between species pairs from empirical data. These estimations are critical to parameterize population models describing the dynamics of interacting species. They also allow computing a series of metrics associated with modern coexistence theory that inform about the likelihood of species to coexist. These metrics are the niche differences that stabilize coexistence between competing species and the average fitness differences that drive competitive dominance and in the absence of niche differences determine the superior competitor. The package also allow computing the two components of the average fitness differences. These are the demographic differences (i.e. species differences in their intrisic population growth rate) and competitive response differences (i.e. species differences in their sensitivity to reduce offspring in response to both intraspecific and interspecific competition). These two components are equally important for determining the species competitive ability (see *Hart et al. 2018 Journal of Ecology)
 
-The package also allow exploring how environmental variation modifies both the ability of species to produce offspring and interaction coefficients between pairs of species (including itself). This feature open the possibility to explore how stabilizing niche differences and average fitness differences vary across environmental gradients, and therefore, it predicts whether the likelihood of species to coexist is not constant across environmental conditions.  
+The package also allow exploring how environmental variation modifies both the ability of species to produce offspring and the interaction coefficients between pairs of species (including with itself). This feature open the possibility to explore how stabilizing niche differences and average fitness differences vary across environmental gradients, and therefore, it allow analyzing whether the likelihood of species to coexist is constant across environmental conditions.  
 
-Here we demonstrate the basic functionality of the package using a published dataset (see *Lanuza, Bartomeus, Godoy. 2018. Ecology Letters 21:865-874* for a description of the dataset). With this example, we will specifically estimate from an observational species seed production in the absence of neighbors and the strength and sign of interactions between species pairs. These values are the basis for estimating the degree of niche overlap (i.e 1- niche differences) and average fitness differences between species pairs.  
+Here we demonstrate the basic functionality of the package using a published observational dataset (see *Lanuza, Bartomeus, Godoy. 2018. Ecology Letters 21:865-874* for a description of the dataset). With this example, we will specifically estimate seed production in the absence of neighbors (lambda) and the strength and sign of species interactions between species pairs (alpha matrix). These values are the basis for estimating the degree of niche overlap (i.e 1- niche differences) and average fitness differences between species pairs.  
 
 **Set up**
 
-First, we load the package and the associated data
+First, we load the package and the associated data. We use a plant dataset that contains, for each individual, its reproductive sucess and the number of neighbors per species in a 7.5 cm buffer.
 
 ```{r}
 library(cxr)
-data("neigh_list", package = "cxr")
+data("neigh_list") #NOT WORKING WITH THIS IS INCLUDED: , package = "cxr") DELETE?
 ```
 
 1 - single species fit
 
 ```{r}
-my.sp <- "HOMA"
+my.sp <- "HOMA" 
 # get data from the list
 obs_homa <- neigh_list[[my.sp]]
 # no need for ID column
 obs_homa <- subset(obs_homa,select = -c(obs_ID))
+head(obs_homa) # For each observation, we need the individual plant fitness and the number of competitors per species (in columns).
 ```
 
+Next, we fit a model that estimates both, the reproduction success in the absence of neighbors (lambda) and the competition matrix (alpha). This is done by fitting a model that mathematically relates the reproductive success to the number of neighbors observed. We use model defaults for now, including the model family, the optimization method and the lower and upper bounds.
+
 ```{r}
+#?cxr_pm_fit #check the help file to understand the function parameters used
 fit_homa <- cxr_pm_fit(data = obs_homa,
                        focal_column = my.sp,
                        model_family = "BH",
                        covariates = NULL,
-                       optimization_method = "bobyqa",
+                       optimization_method = "bobyqa", #is this the recomended default? If so make it also in the code.
                        alpha_form = "pairwise",
                        lambda_cov_form = "none",
                        alpha_cov_form = "none",
@@ -60,16 +64,24 @@ fit_homa <- cxr_pm_fit(data = obs_homa,
                                            alpha_intra = 1,
                                            alpha_inter = 1),
                        fixed_terms = NULL,
-                       bootstrap_samples = 3)
+                       bootstrap_samples = 3) # we set a low number for demonstration purposes, increase it for robus results.
 ```
+
+Note that there is a warning suggesting that the lower bounds might be problematic. We will ignore this for demonstration purposes [BUT IT WOULD BE GREAT TO HAVE A CLEANER EXAMPLE. THERE IS ALSO A WARNING FROM OPTIMX, WHICH IS THE UGLIER PART]
+
+For a quick assess of the model, we can run:
 
 ```{r}
 summary(fit_homa)
 ```
 
-we can access the elements of the returned object as usual
+But we can access all elements of the returned object as usual
 
 ```{r}
+names(fit_homa) #list of all available elemets that can be accessed.
+
+#reproduction success in the absence of neighbors
+fit_homa$lambda
 # intraspecific interaction
 fit_homa$alpha_intra
 # interspecific interactions
@@ -78,6 +90,8 @@ fit_homa$alpha_inter
 
 2 - multispecies fit including the effect of a covariate over lambda and alpha parameters
 
+In this case we will fit (i) several plant species simultaneously, and (ii) take into account a covariable ("salinity") that may modify our parameters of interest.
+
 ```{r}
 my.sp <- c("BEMA","MEEL","PUPA")
 obs_3sp <- data <- neigh_list[my.sp]
@@ -85,7 +99,7 @@ obs_3sp <- data <- neigh_list[my.sp]
 for(i in 1:length(data)){
   obs_3sp[[i]] <- obs_3sp[[i]][,2:length(data[[i]])]
 }
-# covariates: salinity
+# load covariates: salinity
 data("salinity_list")
 salinity <- salinity_list[my.sp]
 # keep only salinity column
@@ -94,6 +108,8 @@ for(i in 1:length(salinity)){
   colnames(salinity[[i]]) <- "salinity"
 }
 ```
+
+And we fit the model as above, but using the multifit function.
 
 ```{r}
 fit_3sp <- cxr_pm_multifit(data = obs_3sp,
@@ -120,6 +136,8 @@ fit_3sp <- cxr_pm_multifit(data = obs_3sp,
                                                alpha_cov = 1),
                            bootstrap_samples = 3)
 ```
+
+[IB: LOTS OF WARNONGS!]
 
 ```{r}
 summary(fit_3sp)
